@@ -22,7 +22,7 @@
   </general>
   <kdevautoproject>
     <general>
-      <activetarget>plugins/zeroconf/ktzeroconfplugin.la</activetarget>
+      <activetarget>libktorrent/libktorrent.la</activetarget>
       <useconfiguration>debug</useconfiguration>
       <useactivetarget>true</useactivetarget>
     </general>
@@ -49,7 +49,7 @@
         <ktorrent>/home/joris/ktorrent/newstuff/debug/./plugins/infowidget</ktorrent>
       </cwd>
       <globaldebugarguments>--nofork</globaldebugarguments>
-      <globalcwd>/home/joris/ktorrent/newstuff/debug</globalcwd>
+      <globalcwd>/home/ivan/working/ktorrent/debug</globalcwd>
       <useglobalprogram>true</useglobalprogram>
       <autoinstall>false</autoinstall>
       <autokdesu>false</autokdesu>
@@ -225,6 +225,7 @@
     <projectdoc>
       <docsystem>Doxygen Documentation Collection</docsystem>
       <docurl>ktorrent.tag</docurl>
+      <usermanualurl/>
     </projectdoc>
   </kdevdocumentation>
   <substmap>
